[gd_scene load_steps=4 format=3 uid="uid://blcuou85hgl3r"]

[ext_resource type="Script" uid="uid://dlg8qfu4pkqdl" path="res://UI/audio_settings.gd" id="1_53hro"]
[ext_resource type="FontFile" uid="uid://6wtxqi1tje8" path="res://assets/Fonts/Dead Revolver Typeface/Dead Revolver Typeface/Fonts/Game/OTF/DeadRevolverGame.otf" id="2_3sb02"]
[ext_resource type="AudioStream" uid="uid://d3pyh5gcl7aef" path="res://assets/sounds/Blow Torch Loop.wav" id="2_v4rch"]

[node name="AudioSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_53hro")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 768.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GameTitleContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GameTitleDrop" type="Label" parent="Panel/MarginContainer/GameTitleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0.862745, 1, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_3sb02")
theme_override_font_sizes/font_size = 60
text = "Audio"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1

[node name="Master" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer2/Master"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer2/Master"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../../../ButtonBack")
focus_neighbor_bottom = NodePath("../../Music/MusicSlider")
focus_next = NodePath("../../Music/MusicSlider")
focus_previous = NodePath("../../../ButtonBack")
max_value = 1.0
step = 0.05

[node name="Music" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer2/Music"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer2/Music"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../../Master/MasterSlider")
focus_neighbor_bottom = NodePath("../../SFX/SFXSlider")
focus_next = NodePath("../../SFX/SFXSlider")
focus_previous = NodePath("../../Master/MasterSlider")
max_value = 1.0
step = 0.05

[node name="SFX" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer2/SFX"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer2/SFX"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../../Music/MusicSlider")
focus_neighbor_bottom = NodePath("../../../ButtonBack")
focus_next = NodePath("../../../ButtonBack")
focus_previous = NodePath("../../Music/MusicSlider")
max_value = 1.0
step = 0.05

[node name="ButtonBack" type="Button" parent="Panel/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_top = NodePath("../VBoxContainer2/SFX/SFXSlider")
focus_neighbor_bottom = NodePath("../VBoxContainer2/Master/MasterSlider")
focus_next = NodePath("../VBoxContainer2/Master/MasterSlider")
focus_previous = NodePath("../VBoxContainer2/SFX/SFXSlider")
text = "Back"

[node name="MasterAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_v4rch")

[node name="MusicAudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_v4rch")
bus = &"Music"

[node name="SFXAudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_v4rch")
bus = &"SFX"

[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer2/Master/MasterSlider" to="." method="_on_master_slider_drag_ended"]
[connection signal="drag_started" from="Panel/MarginContainer/VBoxContainer2/Master/MasterSlider" to="." method="_on_master_slider_drag_started"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer2/Master/MasterSlider" to="." method="_on_master_slider_drag_started"]
[connection signal="focus_exited" from="Panel/MarginContainer/VBoxContainer2/Master/MasterSlider" to="." method="_on_master_slider_drag_ended" binds= [false]]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer2/Master/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer2/Music/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_started" from="Panel/MarginContainer/VBoxContainer2/Music/MusicSlider" to="." method="_on_music_slider_drag_started"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer2/Music/MusicSlider" to="." method="_on_music_slider_drag_started"]
[connection signal="focus_exited" from="Panel/MarginContainer/VBoxContainer2/Music/MusicSlider" to="." method="_on_music_slider_drag_ended" binds= [false]]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer2/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer2/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="drag_started" from="Panel/MarginContainer/VBoxContainer2/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_started"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer2/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_started"]
[connection signal="focus_exited" from="Panel/MarginContainer/VBoxContainer2/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_ended" binds= [false]]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer2/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/ButtonBack" to="." method="_on_button_back_pressed"]
